# GRRLIB

./: .editorconfig  .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  Catnip.cmake  GRRLIB.html  LICENCE.TXT  LICENCE.md  README.TXT  README.html  README.md  _g_r_r_l_i_b____inline_8h.html  _g_r_r_l_i_b____inline_8h.js  _g_r_r_l_i_b____lib_8h.html  _g_r_r_l_i_b____lib_8h.js  annotated.html  annotated_dup.js  classes.html  dir_31622c108de77de59a32254ac003cf08.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_a738d6a0465574a15e4ded3e16776ff8.html  dir_a738d6a0465574a15e4ded3e16776ff8.js  doxygen_crawl.html  examples.html  examples.js  files.html  files_dup.js  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  globals_vars.html  group___all_func.html  group___all_func.js  grrlib.doxygen  (+29 more)
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  doc.yml
0_template/sources/: main.c
1_Demo/sources/: main.c
3.0.5a/0_Minimum/: Makefile
3.0.5a/template1/: Makefile
GRRLIB/: Makefile
GRRLIB-400/GRRLIB/: GRRLIB.c  GRRLIB.h  GRRLIB_addon.c
GRRLIB/GRRLIB/: -README-.txt  GRRLIB.c  GRRLIB.h  GRRLIB_3D.c  GRRLIB_3Dobj.c  GRRLIB_addon.c  GRRLIB_addon.h  GRRLIB_bmf.c  GRRLIB_bmfx.c  GRRLIB_core.c  GRRLIB_fbAdvanced.c  GRRLIB_fileIO.c  GRRLIB_gecko.c  GRRLIB_matrix.c  GRRLIB_print.c  GRRLIB_render.c  GRRLIB_snapshot.c  GRRLIB_systemFont.c  GRRLIB_texEdit.c  GRRLIB_ttf.c  GRRLIBaddon.c  GRRLIBaddon.h  Makefile  README.txt  grrlib.h
GRRLIB/include/: grrlib.h
GRRLIB/lib/: install.bat  install.sh
GRRLIB/source/: GRRLIB_3D.c  GRRLIB_bmfx.c  GRRLIB_fbAdvanced.c  GRRLIB_gecko.c  GRRLIB_snapshot.c  GRRLIB_texEdit.c  GRRLIB_ttf.c  pngu.c
demo-01/: Makefile
docs/: mainpage.dox
examples/: Makefile
examples/3D_CubedTileDemo/: 3D_CubedTileDemo.dol
examples/3D_Light3/: Makefile
examples/3D_Light4/: Makefile
examples/3D_obj/: Makefile
examples/3D_sample1/: 3D_sample1.dol
examples/3D_sample2/: 3D_sample2.dol
examples/3D_sample3/: 3D_sample3.dol  Makefile
examples/3D_sample4/: 3D_sample4.dol  Makefile
examples/3D_sample5/: Makefile
examples/NEED_GRRLIB_FUNCTION/: Makefile
examples/TileDemo/: Makefile  TileDemo.dol
examples/basic_drawing/: Makefile  basic_drawing.dol
examples/bitmap_fx/: Makefile  bitmap_fx.dol
examples/blending/: blending.dol
examples/cmake/: CMakeLists.txt
examples/cmake/source/: main.c
examples/cmake/src/: main.c
examples/compositing/: compositing.dol
examples/composition/: Makefile  composition.c  makefile
examples/demo-01/: Makefile
examples/funsin/: Makefile  funsin.dol
examples/lesson1/: Makefile
examples/nonameno01/: Makefile
examples/nonameno03/: Makefile
examples/particle/: Makefile  particle.dol
examples/template/: Makefile  main.c  template.dol  template.pnproj
examples/ttf/: Makefile
examples/unlimited2d/: Makefile  unlimited2d.dol
examples/unlimited3d/: Makefile  unlimited3d.dol
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  enums_0.js  enumvalues_0.js  files_0.js  functions_0.js  groups_0.js  groups_1.js  groups_2.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js  variables_7.js  (+7 more)
template/: Makefile  template.dol  template.elf
template/source/: main.c
(+221 files in other folders)
